--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'vars';
 @import 'fonts';
 @import 'reset';
+@import 'libs';
 @import 'global';
 
 .header {
@@ -24,22 +25,22 @@
 
   &__list-link {
     color: $title;
-    padding-bottom: 1px;
+    padding: 0px 2px 1px;
     text-transform: uppercase;
     transition: all .4s;
-    @extend %quicksand-400;
+    @extend %roboto-400;
 
     &:hover {
       color: $accent;
       border-bottom: 1px solid $accent;
-      @extend %quicksand-500;
+      @extend %roboto-700;
     }
   }
 
   &__list-link--active {
     color: $accent;
     border-bottom: 1px solid $accent;
-    @extend %quicksand-500;
+    @extend %roboto-700;
   }
 }
 
@@ -161,12 +162,9 @@
   }
 
   &__form-btn {
+    @extend %btn;
     border: none;
-    background-color: $accent;
-    color: #fff;
-    text-transform: uppercase;
-    padding: 12px 26px;
-    box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+    cursor: pointer;
   }
 }
 
@@ -183,4 +181,76 @@
   }
 }
 
+.top-slider {
+  background: $bg;
+  background-image: url('../images/sliderbg.png');
+  background-repeat: no-repeat;
+  // background-size: cover;
+  padding-top: 65px;
+  &__container {
+    max-width: 1560px;
+  }
+  &__content {
+    padding-left: 155px;
+    padding-top: 125px;
+  }
+  &__item {
+    display: flex !important;
+    justify-content: space-between;
+  }
+  &__title {
+    max-width: 670px;
+    @extend %roboto-700;
+    font-size: 56px;
+    line-height: 68px;
+    color: $title;
+    margin-bottom: 35px;
+  }
+  &__text {
+    max-width: 470px;
+    margin-bottom: 55px;
+  }
+  &__link {
+    @extend %btn;
+    padding: 14px 36px;
+  }
+  .slick-dots {
+    display: flex;
+    justify-content: center;
+    li {
+      padding: 0 5px;
+      line-height: 0;
+      margin-top: -70px;
+      button {
+        padding: 0;
+        font-size: 0;
+        background-color: transparent;
+        width: 26px;
+        height: 26px;
+        border-radius: 50%;
+        border: 1px solid transparent;
+        position: relative;
+        &::before {
+          content: '';
+          position: absolute;
+          width: 6px;
+          height: 6px;
+          border-radius: 50%;
+          background-color: $default;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+      &.slick-active {
+        button {
+          border-color: $accent;
+          &::before {
+            background-color: $accent;
+          }
+        }
+      }
+    }
+  }
+}
 @import 'media';
