--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -809,5 +809,33 @@
   }
 }
 
+.page-404 {
+  padding: 110px 0 120px;
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  &__content {
+    max-width: 570px;
+    width: 100%;
+  }
+  &__title {
+    color: #28384f;
+    font-size: 48px;
+    @extend %roboto-700;
+    margin-bottom: 40px;
+    margin-left: -2px;
+  }
+  &__text {
+    margin-bottom: 55px;
+    max-width: 470px;
+  }
+  &__link {
+    @extend %btn;
+    padding: 14px 35px;
+  }
+}
+
 
 @import 'media';
