--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -481,6 +481,91 @@
 
 .product-item {
   max-width: 370px;
+  text-align: center;
+
+  &.product-item--list {
+    min-width: 100%;
+    display: flex;  
+    text-align: left;
+    &:hover {
+      .product-item__link-box {
+        transform: translateY(-280%);
+      }
+    }
+    .product-item__img-box {
+      height: 250px;
+      min-width: 200px;
+      margin-bottom: 0;
+      img {
+        height: 250px;
+      }
+    }
+
+    .product-item__link-box {
+      background-color: transparent;
+      width: 120px;
+      box-shadow: none;
+      bottom: auto;
+      .product-item__link {
+        width: 50px;
+        height: 50px;
+        background-color: #fff;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .product-item__link--line {
+        display: none;
+      }
+    }
+    .product-item__content-box {
+      display: block;
+    }
+    .product-item__wrapper-box {
+      padding: 30px 40px;
+      border: 1px solid #ececec;
+      border-left: none;
+    }
+    .product-item__box {
+      display: flex;
+      flex-wrap: wrap;
+    }
+    .product-item__title {
+      order: -1;
+      width: 100%;
+      padding: 0;
+      margin-bottom: 10px;
+      @extend %roboto-500;
+    }
+    .product-item__price {
+      order: -1;
+      margin-left: -12px;
+    }
+    .star {
+      margin-left: 23px;
+    }
+    .product-item__text {
+      margin-bottom: 25px;
+    }
+    .product-item__btn {
+      color: #fff;
+      padding: 11px 40px;
+      background-color: $title;
+      border: none;
+      cursor: pointer;
+      @extend %roboto-400;
+      transition: all .3s;
+      &:hover {
+        background-color: $accent;
+        box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+      }
+    }
+  }
+
+  &__content-box {
+    display: none;
+  }
 
   &__img-box {
     position: relative;
@@ -625,6 +710,7 @@
     justify-content: center;
     text-align: center;
     box-shadow: 0px 10px 40px 0px rgba(187, 187, 187, 0.3);
+
     span {
       font-size: 48px;
       @extend %roboto-700;
@@ -659,12 +745,13 @@
   background-image: url('../images/blog-bg.svg');
   background-repeat: no-repeat;
   background-size: 100%;
-  background-position: center center;   
+  background-position: center center;
 
   &__items {
     display: flex;
     justify-content: space-between;
     position: relative;
+
     &::after {
       content: '';
       position: absolute;
@@ -675,17 +762,20 @@
       height: 53px;
       background-image: url('../images/decor/blog-decor.svg');
     }
-  } 
+  }
 
   &__item {
     max-width: 370px;
     border: 1px solid #ececec;
     transition: all .3s;
+
     &:hover {
       box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
       border: none;
+
       .blog__item-link {
         color: $accent;
+
         &::after {
           background-image: url('../images/icons/arrow-accent.svg');
         }
@@ -695,6 +785,7 @@
 
   &__item-imglink {
     display: block;
+
     img {
       height: 288px;
       object-fit: cover;
@@ -715,6 +806,7 @@
   &__item-date {
     padding-left: 30px;
     position: relative;
+
     &::before {
       content: '';
       position: absolute;
@@ -729,7 +821,7 @@
     background-image: url('../images/icons/user-grey.svg');
   }
 
-  &__item-date::before{
+  &__item-date::before {
     background-image: url('../images/icons/time.svg');
   }
 
@@ -760,10 +852,12 @@
   padding-top: 100px;
   max-width: 570px;
   margin: 0 auto 115px;
+
   &__links {
     text-align: center;
     margin-bottom: 40px;
   }
+
   &__link {
     font-size: 22px;
     @extend %roboto-400;
@@ -771,14 +865,17 @@
     text-transform: uppercase;
     margin: 0 30px;
   }
+
   &__link--active {
     color: $accent;
     @extend %roboto-700;
   }
+
   &__label {
     display: block;
     margin-bottom: 30px;
   }
+
   &__input {
     display: block;
     width: 100%;
@@ -788,6 +885,7 @@
     height: 60px;
     padding: 0 15px;
   }
+
   &__btn {
     display: block;
     background-color: $title;
@@ -799,11 +897,13 @@
     border: none;
     cursor: pointer;
   }
+
   &__error {
     margin-top: 12px;
     color: $accent;
-    display: inline-block;  
+    display: inline-block;
   }
+
   &__text {
     margin-bottom: 25px;
   }
@@ -811,15 +911,18 @@
 
 .page-404 {
   padding: 110px 0 120px;
+
   &__inner {
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
+
   &__content {
     max-width: 570px;
     width: 100%;
   }
+
   &__title {
     color: #28384f;
     font-size: 48px;
@@ -827,15 +930,349 @@
     margin-bottom: 40px;
     margin-left: -2px;
   }
+
   &__text {
     margin-bottom: 55px;
     max-width: 470px;
   }
+
   &__link {
     @extend %btn;
     padding: 14px 35px;
   }
 }
 
+.shop {
+  padding: 120px 0 105px;
+
+  &__inner {
+    display: flex;
+  }
+
+  &__filters {
+    width: 370px;
+    margin-right: 30px;
+  }
+}
+
+.filter {
+  &__item {
+    padding: 35px 30px 40px;
+    border: 1px solid #ececec;
+    margin-bottom: 40px;
+  }
+
+  &__title {
+    text-transform: uppercase;
+    color: $title;
+    font-size: 22px;
+    @extend %roboto-400;
+    margin-bottom: 25px;
+  }
+}
+
+.filter-search {
+  &__form {
+    display: flex;
+  }
+
+  &__input {
+    border: none;
+    background-color: $bg;
+    height: 50px;
+    padding: 0 5px 0 15px;
+    width: 260px;
+  }
+
+  &__btn {
+    border: none;
+    background-color: $accent;
+    height: 50px;
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+  }
+}
+
+.filter-price {
+  &__label {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 30px;
+  }
+
+  &__btn {
+    @extend %btn;
+    border: none;
+    cursor: pointer;
+  }
+}
+
+.irs--flat .irs-line {
+  top: 13px;
+  height: 5px;
+  background-color: #ececec;
+  border-radius: 0;
+}
+
+.irs--flat .irs-handle {
+  top: 0px;
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  box-shadow: 0px 0px 13px 0px rgba(90, 90, 90, 0.2);
+}
+
+.irs--flat .irs-handle>i:first-child {
+  display: none;
+}
+
+.irs--flat .irs-bar {
+  top: 13px;
+  height: 5px;
+  background-color: $accent;
+}
+
+.irs-from,
+.irs-to,
+.irs-single {
+  display: none;
+}
+
+.irs--flat .irs-min,
+.irs--flat .irs-max {
+  display: none;
+}
+
+.irs--flat {
+  height: 30px;
+}
+
+.filter-color {
+  &__label {
+    padding-bottom: 20px;
+    border-bottom: 1px solid #ececec;
+    display: flex;
+    justify-content: space-between;
+
+    &+.filter-color__label {
+      padding-top: 20px;
+    }
+
+    &:last-child {
+      border-bottom: none;
+      padding-bottom: 0;
+    }
+  }
+
+  &__input {
+    @extend %checkbox-hidden;
+    position: absolute;
+
+    &:checked+.filter-color__checkbox {
+      background-image: url('../images/icons/check-on.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+  }
+
+  &__checkbox {
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    margin-left: -16px;
+    margin-top: 7px;
+  }
+
+  &__checkbox--blue {
+    background-color: #00aeef;
+  }
+
+  &__checkbox--red {
+    background-color: #f52574;
+  }
+
+  &__checkbox--green {
+    background-color: #24d4ac;
+  }
+
+  &__checkbox--orange {
+    background-color: #ff7e00;
+  }
+
+  &__checkbox--black {
+    background-color: #000000;
+  }
+
+  &__checkbox--purple {
+    background-color: #923899;
+  }
+}
+
+.filter-size {
+  &__label {
+    padding-left: 25px;
+    margin-bottom: 20px;
+    display: block;
+  }
+
+  &__input {
+    @extend %checkbox-hidden;
+
+    &:checked+.filter-size__checkbox {
+      background-image: url('../images/icons/check-size.svg');
+      border: none;
+
+      &+.filter-size__text {
+        color: $accent;
+      }
+    }
+  }
+
+  &__checkbox {
+    width: 20px;
+    height: 20px;
+    border: 1px solid $default;
+    position: absolute;
+    margin-left: -35px;
+    margin-top: 1px;
+    border-radius: 50%;
+  }
+}
+
+.filter-category {
+  &__label {
+    cursor: pointer;
+    margin-bottom: 15px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  &__input {
+    @extend %checkbox-hidden;
+
+    &:checked+.filter-category__checkbox {
+      background-color: $accent;
+      color: #fff;
+    }
+  }
+
+  &__checkbox {
+    background-color: #f6f6f6;
+    color: $title;
+    display: flex;
+    justify-content: space-between;
+    padding: 16px 20px;
+  }
+}
+
+.filter-popular {
+  &__label {
+    display: inline-block;
+    margin-bottom: 20px;
+    margin-right: -4px;
+    padding: 10px 0;
+    cursor: pointer;
+  }
+
+  &__title {
+    padding-left: 10px;
+  }
+
+  &__input {
+    @extend %checkbox-hidden;
+
+    &:checked+.filter-popular__checkbox {
+      background-color: $accent;
+      color: #fff;
+      border-color: $accent;
+      border: none;
+    }
+  }
+
+  &__checkbox {
+    border: 1px solid $default;
+    padding: 10px 20px;
+  }
+}
+
+.shop-content {
+  width: 100%;
+
+  &__filter {
+    border: 1px solid #ececec;
+    padding: 20px 25px 20px 30px;
+    margin-bottom: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__filter-buttons {
+    display: flex;
+    align-items: center;
+  }
+
+  &__filter-btn {
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    margin-left: 15px;
+    line-height: 0;
+    cursor: pointer;
+
+    &.shop-content__filter-btn--active {
+      path {
+        fill: $accent;
+      }
+    }
+  }
+
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    border-bottom: 1px solid #ececec;
+
+    .product-item {
+      margin-bottom: 40px;
+    }
+  }
+}
+
+.jq-selectbox__select {
+  margin-left: 30px;
+  height: 32px;
+  padding: 0 35px 0 0px;
+  border: none;
+  background: transparent;
+  box-shadow: none;
+  @extend %quicksand-500;
+  color: $default;
+  text-shadow: none;
+
+  &:hover {
+    background: transparent;
+  }
+}
+
+.jq-selectbox__trigger {
+  border-left: none;
+}
+
+.jq-selectbox__trigger-arrow {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  width: 10px;
+  height: 5px;
+  border: none;
+  background-image: url('../images/icons/angle-down.svg');
+}
 
 @import 'media';
