--- a/app/blog.njk
+++ b/app/blog.njk
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
   <link rel="stylesheet" href="css/blog.min.css" />
+  <link rel="stylesheet" href="css/style.min.css" />
 </head>
 
 <body>
@@ -32,7 +33,7 @@
                   </h4>
                   <div class="blog-box">
                     <a class="blog-box__author" href="#">By Admin</a>
-                    <a class="blog-box__date" href="#">January, 2020</a>
+                    <div class="blog-box__date" href="#">January, 2020</div>
                   </div>
                   <p class="blog-page__item-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
@@ -52,7 +53,7 @@
                   </h4>
                   <div class="blog-box">
                     <a class="blog-box__author" href="#">By Admin</a>
-                    <a class="blog-box__date" href="#">January, 2020</a>
+                    <div class="blog-box__date" href="#">January, 2020</div>
                   </div>
                   <p class="blog-page__item-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
@@ -74,7 +75,7 @@
                   </h4>
                   <div class="blog-box">
                     <a class="blog-box__author" href="#">By Admin</a>
-                    <a class="blog-box__date" href="#">January, 2020</a>
+                    <div class="blog-box__date" href="#">January, 2020</div>
                   </div>
                   <p class="blog-page__item-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
@@ -91,7 +92,7 @@
                   </h4>
                   <div class="blog-box">
                     <a class="blog-box__author" href="#">By Admin</a>
-                    <a class="blog-box__date" href="#">January, 2020</a>
+                    <div class="blog-box__date" href="#">January, 2020</div>
                   </div>
                   <p class="blog-page__item-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
