--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,11 +4,6 @@
 @import 'libs';
 @import 'global';
 
-
-
-
-
-
 .page-404 {
   padding: 110px 0 120px;
 
@@ -26,6 +21,7 @@
   &__title {
     color: #28384f;
     font-size: 48px;
+    line-height: 52px;
     @extend %roboto-700;
     margin-bottom: 40px;
     margin-left: -2px;
@@ -52,6 +48,10 @@
   &__filters {
     width: 370px;
     margin-right: 30px;
+  }
+
+  &__filter-btn {
+    display: none;
   }
 }
 
@@ -324,6 +324,7 @@
     background-color: transparent;
     margin-left: 15px;
     line-height: 0;
+    cursor: pointer;
 
     &.shop-content__filter-btn--active {
       path {
@@ -966,11 +967,36 @@
   }
 
   .blog-box {
+    display: flex;
     justify-content: start;
+    margin-bottom: 25px;
 
     &__author {
       margin-right: 30px;
     }
+    
+  &__author,
+  &__date {
+    padding-left: 30px;
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      left: 0;
+      top: 2px;
+    }
+  }
+
+  &__author::before {
+    background-image: url('../images/icons/user-grey.svg');
+  }
+
+  &__date::before {
+    background-image: url('../images/icons/time.svg');
+  }
   }
 
 }
